# advent-of-code

2022/: setup.sh
2022/day-1/: pyproject.toml
2022/day-10/: day-10.ipynb  pyproject.toml
2022/day-11/: day-11.ipynb  pyproject.toml
2022/day-12/: day-12.ipynb  pyproject.toml
2022/day-13/: day-13.ipynb  pyproject.toml
2022/day-14/: day-14.ipynb  pyproject.toml
2022/day-15/: pyproject.toml
2022/day-16/: pyproject.toml
2022/day-17/: .gitignore  pyproject.toml
2022/day-18/: pyproject.toml
2022/day-19/: pyproject.toml
2022/day-2/: pyproject.toml
2022/day-20/: pyproject.toml
2022/day-21/: pyproject.toml
2022/day-22/: pyproject.toml
2022/day-23/: pyproject.toml
2022/day-24/: pyproject.toml
2022/day-25/: pyproject.toml
2022/day-3/: day-3.ipynb  pyproject.toml
2022/day-4/: day4.ipynb  pyproject.toml
2022/day-5/: day-5.ipynb  pyproject.toml
2022/day-6/: day-6.ipynb  pyproject.toml
2022/day-7/: day-7.ipynb  pyproject.toml
2022/day-8/: day-8.ipynb  pyproject.toml
2022/day-9/: day-9.ipynb  pyproject.toml
